# sqids-cpp

./: CMakeLists.txt  README.md  testTests.cpp
.github/workflows/: cmake.yml
docs/: Doxyfile.in
include/sqids/: blocklist.hpp  sqids.hpp
tests/: CMakeLists.txt  alphabetTests.cpp  blocklistTests.cpp  encodingTests.cpp  minLengthTests.cpp  uniquesTests.cpp
